<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- app settings -->
    <string name="app_name">Easy Click</string>

    <!-- common used -->
    <string name="action_settings">Settings</string>
    <string name="action_rate_us">Rate Us</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about_us">About us</string>
    <string name="clear">Clear</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="apply">Apply</string>

    <string name="title_select_activity_icon">Select Activity Icon</string>
    <string name="title_select_services">Select Services</string>
    <string name="title_activity_manage_patterns">Manage Patterns</string>
    <string name="title_activity_manage_application">Manage Application</string>
    <string name="viewActiveSelections">Active</string>
    <string name="manageApplications">Applications</string>
    <string name="manageActivities">Activities</string>
    <string name="desc_backround">Background image</string>
    <string name="desc_temporal">Background image</string>
    <string name="assigned">Assigned</string>
    <string name="not_assigned">Not Assigned</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="title_activity_proxy">Proxy Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_manage_acivities_list">Activity List</string>
    <string name="addItemHint">New To Do Item</string>
    <string name="addItemContentDescription">New To Do Item</string>
    <string name="title_activity_manage_activity">Activity</string>
    <string name="title_activity_select_event_widget">Select Widget\' Event</string>
    <string name="title_activity_configure_widget_sc">Configure Widget</string>
    <string name="settings_information">Information</string>
    <string name="settings_clear_all">Clear all selectoins</string>
    <string name="settings_desc_clear_all">Clear all selectoins</string>
    <string name="settings_clear_applications">Clear Applications</string>
    <string name="settings_desc_clear_applications">Clear Applications</string>
    <string name="settings_clear_activities">Clear Activities</string>
    <string name="settings_desc_clear_activities">Clear Activities</string>
    <string name="title_activity_view_all_selections">View All Active</string>
    <string name="type_activity_detail">Detail Type</string>

    <string-array name="filter_options_string_array">
        <item>All</item>
        <item>Assigned</item>
        <item>Not Assigned</item>
    </string-array>
    
    <string-array name="dialog_options_activity_type">
        <item>Application</item>
        <item>Service</item>
    </string-array>


</resources>